# SNN

./: .gitignore  README-ANN-SNN high-fidelity transformation pipeline.md  README.md  SNN_Colab_Quickstart.ipynb  latency_result.txt  mypy.ini  naming_game_output.txt  naming_game_result.txt  pyproject.toml  requirements.txt  setup_colab.sh  snn-cli.py  test_log_final_success.txt
app/: __init__.py  containers.py  dashboard.py  deployment.py  langchain_main.py  main.py  unified_perception_demo.py  utils.py
configs/: config.yaml
deployment/: Brain_v20_Core_manifest.json
doc/: AI学習・推論における多重化技術調査.md  Biomimetic-and-thermodynamic-computational-paradigm.md  Brain.md  LLM階層型マルチエージェントシステム設計.md  Next-generation-neuromorphic-computing.md  Objective.md  ROADMAP.md  Roadmap-history.md  SCAL(Statistical-Centroid-Alignment-Learning).md  SCAL(Statistical-Centroid-Alignment-Learning)2.md  SNN-Core-Technology-Specifications.md  SNNproject-structure.md  SNNproject.md  SNN開発：プロジェクト機能テスト コマンド一覧.md  Statistical Centroid Alignment Learning (SCAL).md  assignment.md  human_brain.md  neural_hive_integrated.md  test-command  test-command.md  training_and_inference.md  スパイキングニューラルネットワーク (SNN) 構築のための包括的技術ロードマップとアーキテクチャ設計書.md  脳型AIと直交化の謎.md
doc-old/: ANN-SNN high-fidelity transformation pipeline.md  Benchmark-Report.md  Brain.md  Comprehensive-research-into-next-generation-computing-paradigms.md  Consideration-of-AI-methods-that-do-not-use-backpropagation.md  SCAL-RL統合アーキテクチャ開発仕様書.md  SNNにおける「極限ノイズ環境（S:N比≒0）」での学習法則.csv  bio_agi_architecture.md  test-command_basic.txt  スパイキングニューラルネットワーク (SNN) 構築のための包括的技術ロードマップとアーキテクチャ設計書.md  プロジェクト強化案の調査.md  レポート：超低消費電力と適応的知能の実現に向けた次世代AIアーキテクチャに関する包括的研究.md  レポート：LLMをSNNへ変換する研究.md
experiments/: run_dummy_training.py  run_optuna_hpo.py
results/: verification_report.md
scripts/: auto_tune_efficiency.py  convert_model.py  debug_spike_activity.py  diagnose_signal.py  generate_vlm_dummy_data.py  observe_brain_thought_process.py  prepare_distillation_data.py  register_bitnet_expert.py  register_demo_experts.py  report_sparsity_and_T.py  run_active_inference_demo.py  run_all_tests.py  run_artificial_brain_v14.py  run_benchmark_suite.py  run_bio_microcircuit_demo.py  run_continual_learning_experiment.py  run_cross_modal_demo.py  run_deep_bio_calibration.py  run_distillation_experiment.py  run_distributed_training.sh  run_ecg_analysis.py  run_hardware_simulation.py  run_improved_scal_training.py  run_logic_gated_learning.py  run_multimodal_demo.py  run_neuro_symbolic_evolution.py  run_on_chip_learning.py  run_phase7_os_simulation.py  run_project_health_check.py  run_spatial_demo.py  run_stdp_learning.py  run_vlm_adaptation.py  run_vlm_sleep.py  train_bio_pc_cifar10.py  train_spiking_vlm.py  verify_config_refactor.py  verify_dsa_learning.py  verify_performance.py  verify_phase3.py  visualize_neuron_dynamics.py  (+1 more)
snn_research/: run_logic_gated_learning.py
tests/: conftest.py  liquid_association_cortex.py  test_active_inference.py  test_async_brain_kernel.py  test_autonomous_agent.py  test_bit_spike_mamba.py  test_brain_integration.py  test_communication_protocol.py  test_dsa_layer.py  test_dvs_pipeline.py  test_emergent_language.py  test_evolution.py  test_grpo_logic.py  test_homeostasis.py  test_knowledge_exchange.py  (+12 more)
(+476 files in other folders)
